src/components/Shelf.module.css
.shelf {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
    flex-direction: row;
    flex-grow: 1;
    padding: 20px;
    gap: 20px 25px;
}

.shelfCategoryHeader {
    --header-width: 100%;

    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 60px;
    margin-bottom: 20px;
    flex-basis: 100%;
    flex-grow: 0;
    position: relative;

    &:first-child {
        margin-top: 0;
    }

    .categoryNameWrapper {
        width: var(--header-width);
        padding-inline: 60px;
        z-index: 1;
        position: relative;
        display: flex;
        justify-content: flex-start;
        align-items: center;

        .categoryName {
            font-size: 24pt;
            font-weight: bold;
            font-family: var(--noto-sans-font-family);
            cursor: pointer;
            text-decoration: none;
        }

        &::before {
            content: "#";
            position: absolute;
            left: 5px;
            font-size: 32pt;
            font-weight: bold;
            font-family: var(--montserrat-alternates-font-family);
        }
    }

    &::after {
        width: var(--header-width);
        position: absolute;
        content: "";
        display: block;
        height: 4px;
        bottom: -4px;
        border-radius: 2px;
        background-color: #3a3b3d;
    }
}

.shelfItemWrapper {
    width: fit-content;
    height: fit-content;

    a {
        text-decoration: none;
    }
}

.shelfItem {
    font-size: xx-large;
    font-family: var(--bellota-text-font-family);
    border-radius: 16px;
    border: 5px solid #3a3b3d;
    min-width: 300px;
    width: fit-content;
    height: 220px;
    background-image: var(--bg-image);
    background-size: cover;
    background-position: center;
    text-align: center;
    padding: 10px 24px 20px 24px;
    margin: 0;
    box-shadow: inset 0 18px 0 0 #3a3b3d;

    &:hover {
        cursor: pointer;
    }
}

.legend {
    color: var(--root-text-colour);
    text-shadow: 1px 1px 10px #000000;
    font-weight: bold;
    background: linear-gradient(to top, #3a3b3d00 20%, #3a3b3d99 40%, #3a3b3d99 50%, #3a3b3d00 75%);
    backdrop-filter: blur(1px);
    border-radius: 10px;
    text-align: left;
    overflow: visible;
    white-space: nowrap;
    border-radius: 10px;
    padding: 0;
}

.shelfSpan1 {
    font-weight: 900;
    position: relative;
    top: 35px;
    font-size: 30pt;
    text-shadow: 0px 0px 8px #ffffff;
}

.shelfSpan2 {
    font-weight: 900;
    position: relative;
    top: 35px;
    font-size: 16pt;
    text-shadow: 0px 0px 5px #00000020 inset;
}

